# weave-realtime-client-ga

./: .gitignore  README.md  REALTIME.md  agents_example.py  agents_sdk_example.py  mic_detect.py  pyproject.toml  test_agents_realtime_patch.py  tool_definitions.py  websockets_example.py
